--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <title>Click Me!</title>
+    <title>Web Clicker</title>
 </head>
 
 <body>
@@ -24,6 +24,66 @@
         </ul>
     </nav>
 
+    <div class="main-container">
+        <div class="row">
+            <div class="column">
+
+                <div class="click-me">
+                    <p class="click-text">Click me!</p>
+                </div>
+            </div>
+            <div class="column">
+                <p class="display-main-number">0</p>
+                <p class="display-per-second">
+                <div class="per-sec">0</div>per second</p>
+            </div>
+            <div class="column">
+                <div class="list-container">
+                    <ul>
+                        <li>
+                            <div id="clicker-counter">0</div>
+                            <div class="buy">Buy Clicker</div>
+                        </li>
+                        <li>
+                            <div id="farm-counter">0</div>
+                            <div class="buy">Buy Farm</div>
+                        </li>
+                        <li>
+                            <div id="mine-counter">0</div>
+                            <div class="buy">Buy Mine</div>
+                        </li>
+                        <li>
+                            <div id="factory-counter">0</div>
+                            <div class="buy">Buy Factory</div>
+                        </li>
+                        <li>
+                            <div id="lab-counter">0</div>
+                            <div class="buy">Buy Lab</div>
+                        </li>
+                        <li>
+                            <div id="nuclear-pp-counter">0</div>
+                            <div class="buy">Buy Nuclear Powerplant</div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="column">
+                    <ul>
+                        <li>Clickers: <div class="clicker-persec">0</div></li>
+                        <li>Farm: <div class="farm-persec">0</div></li>
+                        <li>Mine: <div class="mine-persec">0</div></li>
+                    </ul>
+                </div>
+                <div class="column">
+                    <ul>
+                        <li>Factories: <div class="factory-persec">0</div></li>
+                        <li>Labs: <div class="lab-persec">0</div></li>
+                        <li>Nuclear: <div class="nuclear-persec">0</div></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
 </body>
 
 </html>
